--- a/package.xml
+++ b/package.xml
@@ -47,7 +47,7 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
-  <!--   <doc_depend>doxygen</doc_depend> -->
+  <!--   <doc_depend>doxygen</doc_depend> --> 
 
   <buildtool_depend>catkin</buildtool_depend>
 
@@ -55,6 +55,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>draconis_demo_custom_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>message_filters</build_depend>
   <build_depend>pcl_conversions</build_depend>
@@ -64,6 +65,7 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>draconis_demo_custom_msgs</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>message_filters</build_export_depend>
   <build_export_depend>pcl_conversions</build_export_depend>
@@ -73,6 +75,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>draconis_demo_custom_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>message_filters</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
